--- a/cli/package.json
+++ b/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bundlesize2",
+  "name": "@th3rdwave/bundlesize",
   "version": "0.0.30",
   "description": "Keep your bundle size in check",
   "main": "index.js",
