--- a/github-reporter/package.json
+++ b/github-reporter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bundlesize-github-reporter",
+  "name": "@th3rdwave/bundlesize-github-reporter",
   "private": true,
   "version": "0.0.0",
   "scripts": {
